@@ -70,6 +70,8 @@ CLEANUP:
 
 
 DONE:
+9/8/08 - rewrite DistanceAxisNode to handle English/metric switching
+9/8/08 - bugfix: fix loop start point in Valley elevation interpolation
 9/8/08 - quick-&-dirty handling of meters-to-feet in DistanceAxisNode, tick spacing is not adjusted
 9/8/08 - move all units conversions to UnitsConverter
 9/8/08 - add englishUnits arg to constructors for coordinates feature
